dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:spring-boot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
    template:
      metadata:
        labels:
          app: spring-boot-app
      spec:
        containers:
          -name: app
           image: ghcr.io/veresattila2002/helloword:1.0
           ports:
           - containerPort: 8080
