dev/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway 
metadata:
  name: spring-boot-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP 
      hosts:
        - "*"
