dev/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: spring-boot-app
  namespace: spring-boot-app
spec:
  host: spring-boot-app.spring-boot-app.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
