dev/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: spring-boot-app-vs
  namespace: spring-boot-app
spec:
  hosts:
    - "spring-boot-app.127.0.0.1.nip.io"
  gateways:
    - istio-system/spring-boot-app-gateway
  http:
    - match:
      - uri:
          prefix: /message
      route:
      - destination:
          host: spring-boot-app.spring-boot-app.svc.cluster.local
          port:
            number: 80
